--- a/PersonalDIary/AndroidManifest.xml
+++ b/PersonalDIary/AndroidManifest.xml
@@ -35,6 +35,13 @@
             
         </activity>
         
+        <activity 
+            android:name="com.anurag.personaldiary.PersonalDiaryDisplayStoryDetailActivity"
+            android:label="@string/app_name"
+            >
+            
+        </activity>
+        
         <provider
          android:name="com.anurag.personaldiary.PersonalDiaryContentProvider" 
          android:authorities="com.anurag.personaldiary.PersonalDiaryContentProvider" 
